--- a/examples/0_simulation.ipynb
+++ b/examples/0_simulation.ipynb
@@ -10,7 +10,8 @@
     "2. to simulate the resection area which we will use as a ground truth to test the detection pipelines;\n",
     "3. to evaluate the signal-to-noise ratio of simulated events.\n",
     "\n",
-    "First, we import the `simulation` module and other packages. NOTE: To import `simulation` the working directory should be changed if the example is run from the cloned GitHub repository.\n"
+    "First, we import the `simulation` module and other packages. \n",
+    "NOTE: To import `simulation` the working directory should be changed if the example is run from the cloned GitHub repository.\n"
    ],
    "metadata": {}
   },
