--- a/examples/1_manual_pipeline.ipynb
+++ b/examples/1_manual_pipeline.ipynb
@@ -5,13 +5,13 @@
    "source": [
     "## Manual Pipeline\n",
     "\n",
-    "In the previous notebook `0_simulation.ipynb` we simulated dataset. Our simulated dataset includes __detections__ and __resection_mni__. Now we are ready to run `Manual detections pipeline` using __detections__ as manually selected spikes and compare the outlut to the __resection_mni__ (ground truth). In this notebook we have the following goals:\n",
-    "1. Prepare and run irritative zone delineation using __detections__ timepoints.\n",
-    "2. Evaluate the quality of the irritative zone prediction using __resection__.\n",
+    "In the previous notebook `0_simulation.ipynb` we simulated a dataset. Our simulated dataset includes __detections__ and __resection_mni__. Now we are ready to run `Manual detections pipeline` using __detections__ as manually selected spikes and compare the output to the __resection_mni__ (ground truth). In this notebook we have the following goals:\n",
+    "1. to prepare and run irritative zone delineation using __detections__ timepoints;\n",
+    "2. to evaluate the quality of the irritative zone prediction using __resection__.\n",
     "\n",
-    "We will use the results presented in this nodebook as a baseline for the automated pipelines.\n",
+    "We will use the results presented in this notebook as a baseline for the automated pipelines.\n",
     "\n",
-    "NOTE: To import the megspikes modules we should change the working directory if we are running this example from the cloned GitHub repository."
+    "NOTE: To import `simulation` the working directory should be changed if the example is run from the cloned GitHub repository."
    ],
    "metadata": {}
   },
@@ -141,7 +141,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "`dataset` is an instance of xarray.Dataset, and it includes all the results. We can explore the results and the corresponding metadata."
+    "`dataset` is an instance of xarray.Dataset, and it includes all the results. Now we can explore the results and the corresponding metadata."
    ],
    "metadata": {}
   },
@@ -161,7 +161,7 @@
    "source": [
     "## View localized cluster\n",
     "\n",
-    "First we should convert numpy ndarray to mne.SourceEstimate. We use `array_to_stc` for this."
+    "First we should convert numpy ndarray to `mne.SourceEstimate`. We use `array_to_stc` for this purpose."
    ],
    "metadata": {}
   },
@@ -235,7 +235,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Let's load the updated dataset to check it."
+    "We load the updated dataset to check that the dataset has been properly updated."
    ],
    "metadata": {
     "scrolled": false
