--- a/examples/1_manual_pipeline.ipynb
+++ b/examples/1_manual_pipeline.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "We will use the results presented in this notebook as a baseline for the automated pipelines.\n",
     "\n",
-    "NOTE: To import `simulation` the working directory should be changed if the example is run from the cloned GitHub repository."
+    "NOTE: To import `simulation` the working directory should be changed if the example is run from the cloned GitHub repository.\n"
    ],
    "metadata": {}
   },
