--- a/examples/2_aspire_alphacsc_pipepline.ipynb
+++ b/examples/2_aspire_alphacsc_pipepline.ipynb
@@ -6,8 +6,12 @@
     "## Aspire + AlphaCSC pipeline\n",
     "\n",
     "In this notebook we will run automated spike detection pipeline and visualize the results. We will use simulation described in `0_simulation.ipynb`.\n",
+    "This notebook pursues the following goals:\n",
     "\n",
-    "NOTE: To import the megspikes modules we should change the working directory if we are running this example from the cloned GitHub repository."
+    "1. to run the full detection pipeline using the combination of ASPIRE and aSCS algorithms;\n",
+    "2. to visualize each step using an interactive visualision tool `panel`.\n",
+    "\n",
+    "NOTE: To import `simulation` the working directory should be changed if the example is run from the cloned GitHub repository.\n"
    ],
    "metadata": {}
   },
@@ -117,7 +121,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Using this parameters we create `sklear.Pipeline`"
+    "Using these parameters we create `sklear.Pipeline`"
    ],
    "metadata": {}
   },
@@ -152,7 +156,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "There is not input for this pipline, so we can run it with `X=None`. As an output we aquire `xr.Dataset` with all results and `mne.io.Raw` file."
+    "No input is needed to run this pipeline, so we can run it with `X=None`. As an output we acquire `xr.Dataset` with all results and `mne.io.Raw` file."
    ],
    "metadata": {}
   },
@@ -173,7 +177,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Now we can also load created dataset."
+    "Now we can also load the created dataset."
    ],
    "metadata": {}
   },
