add fast music spikes localization visualization

--- a/examples/1_manual_pipeline.ipynb
+++ b/examples/1_manual_pipeline.ipynb
@@ -2,6 +2,8 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "5dc2d62c",
+   "metadata": {},
    "source": [
     "## Manual Pipeline\n",
     "\n",
@@ -12,12 +14,14 @@
     "We will use the results presented in this notebook as a baseline for the automated pipelines.\n",
     "\n",
     "NOTE: To import `simulation` the working directory should be changed if the example is run from the cloned GitHub repository.\n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c8e878cd",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import os\n",
     "from pathlib import Path\n",
@@ -38,302 +42,335 @@
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "90503f93",
+   "metadata": {},
    "source": [
     "## Prepare the simulation"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "71274a4f",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "sim = Simulation(sample_path, n_events=[15, 15, 0, 0])\n",
     "sim.simulate_dataset()\n",
     "sim"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "e6f19b1b",
+   "metadata": {},
    "source": [
     "`sim.detections` is an array of spike peak localizations in samples. We will use it as manual detections."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b7070396",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "sim.detections"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "8c1393e1",
+   "metadata": {},
    "source": [
     "`sim.clusters` is an array of clusters that corresponds to the simulation source index."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "40ed8039",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "sim.clusters"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "c01c2c81",
+   "metadata": {},
    "source": [
     "## Run Manual Pipeline"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c5deb890",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from megspikes.pipeline import iz_prediction_pipeline\n",
     "from sklearn import set_config\n",
     "set_config(display='diagram')"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ed62dc7c",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "params = {\n",
     "    'PrepareClustersDataset': {'detection_sfreq': 1000.}\n",
     "}\n",
     "pipe = iz_prediction_pipeline(sim.case_manager, params)\n",
     "pipe"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "73c3a4ac",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "detections = {\n",
     "    'spikes': sim.detections,\n",
     "    'clusters': sim.clusters - 1\n",
     "}\n",
     "dataset, meg_data = pipe.fit_transform((detections, sim.raw_simulation.copy()))"
-   ],
-   "outputs": [],
-   "metadata": {
-    "scrolled": true
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "8730a6ac",
+   "metadata": {},
    "source": [
     "`dataset` is an instance of xarray.Dataset, and it includes all the results. Now we can explore the results and the corresponding metadata."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "dataset"
-   ],
-   "outputs": [],
+   "id": "4e4e9e5b",
    "metadata": {
     "scrolled": true
-   }
+   },
+   "outputs": [],
+   "source": [
+    "dataset"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "faf776cc",
+   "metadata": {},
    "source": [
     "## View localized cluster\n",
     "\n",
     "First we should convert numpy ndarray to `mne.SourceEstimate`. We use `array_to_stc` for this purpose."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3ffe6e7d",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from megspikes.localization.localization import array_to_stc\n",
     "\n",
     "stc = array_to_stc(dataset.mne_localization.values[0, 0, :, :],\n",
     "                   sim.case_manager.fwd['ico5'],\n",
     "                   sim.case_manager.case)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "9e4fc3d4",
+   "metadata": {},
    "source": [
     "Now we can plot the cluster."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bc70a9b2",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%matplotlib qt5\n",
     "brain = stc.plot(subjects_dir=sim.case_manager.freesurfer_dir, hemi='both')"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "1ef04e22",
+   "metadata": {},
    "source": [
     "## View clusters using Cluster Slope Viewer"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4364da96",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%matplotlib qt5\n",
     "import mne\n",
     "from megspikes.visualization.visualization import ClusterSlopeViewer\n",
     "mne.viz.set_3d_backend('pyvista')"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2d2bb5b0",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "pc = ClusterSlopeViewer(dataset, sim.case_manager)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5565ae72",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "pc.view()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "We load the updated dataset to check that the dataset has been properly updated."
-   ],
+   "id": "c8522cc7",
    "metadata": {
     "scrolled": false
-   }
+   },
+   "source": [
+    "We load the updated dataset to check that the dataset has been properly updated."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a6e8b797",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import xarray as xr\n",
     "updated_ds = xr.load_dataset(pc.fname_save_ds)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "id": "c3b67772",
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "42573126",
+   "metadata": {},
    "source": [
     "## Veiw IZ prediction"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "081a69fa",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from megspikes.localization.localization import array_to_stc\n",
     "stc = array_to_stc(dataset.iz_prediction.values[:, -1],\n",
     "                   sim.case_manager.fwd['ico5'],\n",
     "                   sim.case_manager.case)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1e34fe75",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%matplotlib qt5\n",
     "\n",
     "# Add function from visualization \n",
     "brain = stc.plot(subjects_dir=sim.case_manager.freesurfer_dir, hemi='both')"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "id": "a7213309",
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "6a079dc1",
+   "metadata": {},
    "source": [
     "## Evaluate Irritative Zone prediction"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "111f38c0",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from megspikes.scoring.scoring import ScoreIZPrediction\n",
     "scorer = ScoreIZPrediction()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "scorer.score(dataset, sim.mni_resection, 'peak')"
-   ],
-   "outputs": [],
+   "id": "8768d940",
    "metadata": {
     "scrolled": true
-   }
+   },
+   "outputs": [],
+   "source": [
+    "dist = scorer.score(dataset, sim.mni_resection, 'peak')\n",
+    "print(f\"Average distance from the resection area is {dist:.0f} mm for the 'peak' condition\")"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "3b9950d3",
+   "metadata": {},
    "source": [
     "### Plot resection and prediction"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "25c8386f",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "from nilearn import plotting\n",
@@ -344,20 +381,22 @@
     "\n",
     "display.add_markers(scorer.detection_mni, marker_color='tomato', alpha=0.2)\n",
     "display.add_markers(sim.mni_resection, marker_color='indigo', alpha=0.6)\n"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "88a3bed5",
+   "metadata": {},
    "source": [
     "## Test noise levels"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a44c8e1a",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "params = {\n",
     "    'PrepareClustersDataset': {'detection_sfreq': 1000.}\n",
@@ -375,16 +414,15 @@
     "    slope_score = scorer.score(dataset, sim.mni_resection, 'slope')\n",
     "    peak_score = scorer.score(dataset, sim.mni_resection, 'peak')\n",
     "    print(f\"Scores: baseline={baseline_score}, slope={slope_score}, peak={peak_score}\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "id": "60980002",
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   }
  ],
  "metadata": {
