--- a/examples/2_aspire_alphacsc_pipepline.ipynb
+++ b/examples/2_aspire_alphacsc_pipepline.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Aspire + AlphaCSC pipeline\n",
     "\n",
@@ -12,12 +13,13 @@
     "2. to visualize each step using an interactive visualision tool `panel`.\n",
     "\n",
     "NOTE: To import `simulation` the working directory should be changed if the example is run from the cloned GitHub repository.\n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import os\n",
     "from pathlib import Path\n",
@@ -45,63 +47,65 @@
     "logging.info(\"test info\")\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Simulate data\n",
     "\n",
     "For more information see `0_simulation.ipynb`"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "sim = Simulation(sample_path)\n",
-    "sim.simulate_dataset()\n",
-    "sim"
-   ],
-   "outputs": [],
    "metadata": {
     "scrolled": false,
     "tags": []
-   }
+   },
+   "outputs": [],
+   "source": [
+    "sim = Simulation(sample_path)\n",
+    "# sim = Simulation(sample_path, n_events=[15, 15, 0, 0])\n",
+    "sim.simulate_dataset()\n",
+    "\n",
+    "sim"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Run Aspire-AlphaCSC Pipeline"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from megspikes.pipeline import aspire_alphacsc_pipeline\n",
     "\n",
     "from sklearn import set_config\n",
     "set_config(display='diagram')\n",
     "set_config(print_changed_only=False)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "First, we should specify pipeline parameters. All parameters are listed in the `aspire_alphacsc_default_params.yml`."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "params = {\n",
     "    'n_ica_components': 5,\n",
@@ -114,384 +118,404 @@
     "        'z_hat_threshold': 1.,\n",
     "        'z_hat_threshold_min': 0.1}\n",
     "}"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Using these parameters we create `sklear.Pipeline`"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "pipe = aspire_alphacsc_pipeline(sim.case_manager, params)\n",
     "pipe"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "We can also save it as an __HTML__ document"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from sklearn.utils import estimator_html_repr\n",
     "with open('my_estimator.html', 'w') as f:  \n",
     "    f.write(estimator_html_repr(pipe))"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "No input is needed to run this pipeline, so we can run it with `X=None`. As an output we acquire `xr.Dataset` with all results and `mne.io.Raw` file."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "dataset, raw = pipe.fit_transform(None)"
-   ],
-   "outputs": [],
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
     },
     "tags": []
-   }
-  },
-  {
-   "cell_type": "markdown",
+   },
+   "outputs": [],
    "source": [
-    "Now we can also load the created dataset."
-   ],
-   "metadata": {}
+    "dataset, raw = pipe.fit_transform(None)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can also load the created dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "import xarray as xr\n",
     "dataset = xr.open_dataset(sample_path / 'sample' / 'sample_alphacsc_results.nc')"
-   ],
-   "outputs": [],
-   "metadata": {
-    "scrolled": true
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Visualize detection\n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from megspikes.visualization.visualization import DetectionsViewer\n",
     "pp = DetectionsViewer(dataset, sim.case_manager)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Plot ICA components\n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "app = pp.view_ica()\n",
-    "app.show()"
-   ],
-   "outputs": [],
-   "metadata": {
-    "tags": []
-   }
+    "# app.show()\n",
+    "app"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Plot ICA sources and detections\n"
-   ],
-   "metadata": {
-    "tags": []
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "app = pp.view_ica_sources_and_peaks()\n",
-    "app.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
+    "# app.show()\n",
+    "app"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Plot ICA fast RAP-MUSIC localizatons"
-   ],
    "metadata": {
     "tags": []
-   }
+   },
+   "source": [
+    "## Plot ICA fast RAP-MUSIC localizatons"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "dataset"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "app = pp.view_ica_peak_localizations()\n",
+    "app"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Plot AlphaCSC atoms"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "pp.data.alphacsc_atoms"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "app = pp.view_alphacsc_atoms()\n",
-    "app.show()"
-   ],
-   "outputs": [],
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
     },
     "tags": []
-   }
+   },
+   "outputs": [],
+   "source": [
+    "app = pp.view_alphacsc_atoms()\n",
+    "# app.show()\n",
+    "app"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Plot AlphaCSC selected evets"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "app = pp.view_alphacsc_clusters(sim.raw_simulation.copy())\n",
-    "app.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
+    "# app.show()\n",
+    "app"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Localize detected clusters"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from megspikes.pipeline import read_detection_iz_prediction_pipeline\n",
     "from sklearn import set_config\n",
     "set_config(display='diagram')\n",
     "set_config(print_changed_only=False)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "params = {\n",
     "    'PrepareClustersDataset': {'detection_sfreq': 200.}\n",
     "}\n",
     "pipe = read_detection_iz_prediction_pipeline(sim.case_manager, params)\n",
     "pipe"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "clusters, raw = pipe.fit_transform((dataset, sim.raw_simulation.copy()))"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "clusters"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import xarray as xr\n",
     "clusters = xr.open_dataset(sample_path / 'sample' / 'sample_alphacsc_cluster_results.nc')"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## View clusters using Cluster Slope Viewer"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import mne\n",
     "mne.viz.set_3d_backend('pyvista')"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from megspikes.visualization.visualization import ClusterSlopeViewer\n",
     "import panel as pn\n"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "%matplotlib qt5\n",
     "pc = ClusterSlopeViewer(clusters, sim.case_manager)\n",
     "pc.data.clusters"
-   ],
-   "outputs": [],
-   "metadata": {
-    "tags": []
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "pc.view()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Evaluate Irritative Zone prediction"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from megspikes.scoring.scoring import ScoreIZPrediction\n",
     "scorer = ScoreIZPrediction()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "scorer.score(clusters, sim.mni_resection, 'peak')"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "dist = scorer.score(clusters, sim.mni_resection, 'peak')\n",
+    "print(f\"Average distance from the resection area is {dist:.0f} mm for the 'peak' condition\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "scorer.score(clusters, sim.mni_resection, 'slope')"
-   ],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": [
+    "dist = scorer.score(clusters, sim.mni_resection, 'slope')\n",
+    "print(f\"Average distance from the resection area is {dist:.0f} mm for the 'slope' condition\")"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Plot resection and prediction"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "from nilearn import plotting\n",
+    "\n",
+    "dist = scorer.score(clusters, sim.mni_resection, 'peak')\n",
+    "\n",
+    "\n",
     "fig, ax = plt.subplots(figsize=(15, 7))\n",
     "\n",
     "display = plotting.plot_glass_brain(\n",
@@ -499,16 +523,14 @@
     "\n",
     "display.add_markers(scorer.detection_mni, marker_color='tomato', alpha=0.2)\n",
     "display.add_markers(sim.mni_resection, marker_color='indigo', alpha=0.6)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   }
  ],
  "metadata": {
