add iz prediction plotting

--- a/examples/2_aspire_alphacsc_pipepline.ipynb
+++ b/examples/2_aspire_alphacsc_pipepline.ipynb
@@ -27,6 +27,7 @@
     "import matplotlib.pylab as plt\n",
     "import mne\n",
     "import numpy as np\n",
+    "mne.viz.set_3d_backend('pyvista')\n",
     "\n",
     "# change to the root directory of the project\n",
     "if os.getcwd().split(\"/\")[-1] == \"examples\":\n",
@@ -417,18 +418,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import mne\n",
-    "mne.viz.set_3d_backend('pyvista')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from megspikes.visualization.visualization import ClusterSlopeViewer\n",
-    "import panel as pn\n"
+    "from megspikes.visualization.visualization import ClusterSlopeViewer\n"
    ]
   },
   {
@@ -451,6 +441,16 @@
    "outputs": [],
    "source": [
     "pc.view()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xarray as xr\n",
+    "clusters = xr.open_dataset(sample_path / 'sample' / 'sample_clusters_manually_checked.nc')"
    ]
   },
   {
