update IZ plotting settings

--- a/examples/1_manual_pipeline.ipynb
+++ b/examples/1_manual_pipeline.ipynb
@@ -313,8 +313,12 @@
    "source": [
     "%matplotlib qt5\n",
     "\n",
-    "# Add function from visualization \n",
-    "brain = stc.plot(subjects_dir=sim.case_manager.freesurfer_dir, hemi='both')"
+    "surfer_kwargs = dict(\n",
+    "    hemi='both',  surface='inflated',  spacing='ico4',\n",
+    "    colorbar=False, background='w', foreground='k',\n",
+    "    colormap='Reds', smoothing_steps=10, alpha=1,\n",
+    "    add_data_kwargs={\"fmin\": 0, \"fmid\": 0.5, \"fmax\": 0.8})\n",
+    "brain = stc.plot(subjects_dir=sim.case_manager.freesurfer_dir, **surfer_kwargs)"
    ]
   },
   {
