expand plots description

--- a/examples/2_aspire_alphacsc_pipepline.ipynb
+++ b/examples/2_aspire_alphacsc_pipepline.ipynb
@@ -209,7 +209,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualize detection\n"
+    "# Visualize detection\n",
+    "To visualize the steps of ASPIRE AlphaCSC pipleine we should creat `DetectionsViewer` object.\n",
+    "For the interactive visualization we are using [Panel](https://panel.holoviz.org/index.html). Created instance of interactive application -- called `app` in this notebook -- could be opened in the notebook by calling the cell with app object or in the different Web Browser window by calling `app.show()`. All the created applications related to the `DetectionsViewer` are connected and updated simultaneouly with the change of the parameters. "
    ]
   },
   {
@@ -226,7 +228,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plot ICA components\n"
+    "## Plot ICA components\n",
+    "First part of the detection procedure is based on the ICA decomposition of the raw MEG data. So it would be helpful to visualize ICA components distribution over the sensors."
    ]
   },
   {
@@ -248,7 +251,8 @@
     "tags": []
    },
    "source": [
-    "## Plot ICA sources and detections\n"
+    "## Plot ICA sources and detections\n",
+    "To visualize ICA peak detection and selection procedure we plot detected events over the ICA sources timeseries. Note, that we can also view the peaks that were selected after AlphaCSC decompositions and peaks selection."
    ]
   },
   {
@@ -268,7 +272,8 @@
     "tags": []
    },
    "source": [
-    "## Plot ICA fast RAP-MUSIC localizatons"
+    "## Plot ICA fast RAP-MUSIC localizatons\n",
+    "ICA peaks are selected base on results of the RAP-MUSIC algorithm. We can also plot the localization of the ICA peaks in the brain. Note, that the spacio-temporal clusters of the ICA peaks are used to generate final clusters in the original [ASPIRE](https://github.com/kuznesashka/ASPIRE.git) algorithm."
    ]
   },
   {
@@ -285,7 +290,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plot AlphaCSC atoms"
+    "## Plot AlphaCSC atoms\n",
+    "As a result of AlphaCSC decomposition we have spacial portrait of an atom $u$ and a temporal timeseries $v$ which we will plot in this section."
    ]
   },
   {
@@ -296,13 +302,6 @@
    "source": [
     "pp.data.alphacsc_atoms"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -324,7 +323,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plot AlphaCSC selected evets"
+    "## Plot AlphaCSC selected evets\n",
+    "Finally, we would like to veiw the generated AlphaCSC atoms and the individual events included in each atom."
    ]
   },
   {
@@ -337,13 +337,6 @@
     "# app.show()\n",
     "app"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -418,7 +411,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from megspikes.visualization.visualization import ClusterSlopeViewer\n"
+    "from megspikes.visualization.visualization import ClusterSlopeViewer"
    ]
   },
   {
@@ -452,13 +445,6 @@
     "import xarray as xr\n",
     "clusters = xr.open_dataset(sample_path / 'sample' / 'sample_clusters_manually_checked.nc')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
