--- a/examples/2_aspire_alphacsc_pipepline.ipynb
+++ b/examples/2_aspire_alphacsc_pipepline.ipynb
@@ -210,8 +210,8 @@
    "metadata": {},
    "source": [
     "# Visualize detection\n",
-    "To visualize the steps of ASPIRE AlphaCSC pipleine we should creat `DetectionsViewer` object.\n",
-    "For the interactive visualization we are using [Panel](https://panel.holoviz.org/index.html). Created instance of interactive application -- called `app` in this notebook -- could be opened in the notebook by calling the cell with app object or in the different Web Browser window by calling `app.show()`. All the created applications related to the `DetectionsViewer` are connected and updated simultaneouly with the change of the parameters. "
+    "To visualize the steps of ASPIRE AlphaCSC pipeline `DetectionsViewer` object should be created.\n",
+    "For the interactive visualization [Panel](https://panel.holoviz.org/index.html) is used. Created instance of interactive application -- called `app` in this notebook -- could be opened in the notebook by calling the cell with an app object or in the different Web Browser window by calling `app.show()`. All the created applications related to the `DetectionsViewer` are connected and updated simultaneouly with the change of the parameters. "
    ]
   },
   {
@@ -252,7 +252,7 @@
    },
    "source": [
     "## Plot ICA sources and detections\n",
-    "To visualize ICA peak detection and selection procedure we plot detected events over the ICA sources timeseries. Note, that we can also view the peaks that were selected after AlphaCSC decompositions and peaks selection."
+    "To visualize ICA peak detection and selection procedure we plot detected events over the ICA sources timeseries. Note, that we can also view the peaks that were selected after AlphaCSC decomposition and peaks selection."
    ]
   },
   {
@@ -273,7 +273,7 @@
    },
    "source": [
     "## Plot ICA fast RAP-MUSIC localizatons\n",
-    "ICA peaks are selected base on results of the RAP-MUSIC algorithm. We can also plot the localization of the ICA peaks in the brain. Note, that the spacio-temporal clusters of the ICA peaks are used to generate final clusters in the original [ASPIRE](https://github.com/kuznesashka/ASPIRE.git) algorithm."
+    "ICA peaks are selected based on results of the RAP-MUSIC algorithm. We can also plot the localization of the ICA peaks in the brain. Note, that the spatio-temporal clusters of the ICA peaks are used to generate final clusters in the original [ASPIRE](https://github.com/kuznesashka/ASPIRE.git) algorithm."
    ]
   },
   {
@@ -291,7 +291,7 @@
    "metadata": {},
    "source": [
     "## Plot AlphaCSC atoms\n",
-    "As a result of AlphaCSC decomposition we have spacial portrait of an atom $u$ and a temporal timeseries $v$ which we will plot in this section."
+    "As a result of AlphaCSC decomposition we get the spacial portrait of an atom $u$ and a temporal timeseries $v$ which we will plot in this section."
    ]
   },
   {
@@ -324,7 +324,7 @@
    "metadata": {},
    "source": [
     "## Plot AlphaCSC selected evets\n",
-    "Finally, we would like to veiw the generated AlphaCSC atoms and the individual events included in each atom."
+    "Finally, we might want to look at the generated AlphaCSC atoms and the individual events included in each atom."
    ]
   },
   {
